Atualiza .gitignore e expande README.md
- Adiciona entradas ao .gitignore para ignorar arquivos do Playwright e logs.
- O README.md agora inclui uma descrição do projeto de automação de testes com Playwright e .NET 9, detalha a estrutura do projeto, lista pré-requisitos, fornece instruções de configuração e execução de testes, além de apresentar uma estrutura de exemplo do projeto.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+PlaywrightTests/playwright/.auth
+PlaywrightTests/.github/
+PlaywrightTests/.vs/
